  * Added XS-Vcs- fields
  * Added build dependency on texlive-extra-utils to pull in epstopdf
    (closes: #420329)
  * Fixed typos (hbuild.mk) (closes: #419322)
  * Corrected documentation about how to override configure flags
    (closes: #420198)
  * Shortened uploaders list
  * Do not unapply patches when building from a tarball (tarball.mk)
    (closes: #424080)

 -- Peter Eisentraut <petere@debian.org>  Fri, 18 May 2007 21:03:45 +0200

cdbs (0.4.48) unstable; urgency=medium

  * Reverse patches before cleaning build directory (simple-patchsys.mk)
    (closes: #387103)
  * Drop build dependency on python2.3; use python2.5 in the testsuite
    instead (closes: #403358)

 -- Peter Eisentraut <petere@debian.org>  Sat, 16 Dec 2006 18:25:48 +0100

cdbs (0.4.47) unstable; urgency=low

  * Replaced db2latex-xsl by dblatex for documentation build (patch by
    Frank Küster) (closes: #393665)

 -- Peter Eisentraut <petere@debian.org>  Thu, 26 Oct 2006 12:21:40 +0200

cdbs (0.4.46) unstable; urgency=high

  * Changed patch stamp file naming scheme to handle equally named patches
    in different directories (simple-patchsys.mk) (closes: #380499)

 -- Peter Eisentraut <petere@debian.org>  Thu,  3 Aug 2006 19:43:44 +0200

cdbs (0.4.45) unstable; urgency=medium

  * Added support for user-defined CC and CXX in qmake class
  * Fixed diff call yielding false positives in list-missing rule
    (utils.mk) (closes: #378013); test case in list-missing-1.sh
  * Fixed bashisms in utils.mk
  * Fixed bashism in python-distutils.mk
  * Call dh_py* for all packages in new Python policy section
    (python-distutils.mk) (closes: #377965)
  * Make use of per-patch stamp files and don't ignore failed patch
    reversals (simple-patchsys.mk) (closes: #372682)
  * Removed some redundant autotools use, since we know our target platform
    pretty well
  * Updated debian/copyright, removed redundant AUTHORS file
  * Updated TODO
