@@ -20,6 +20,9 @@ cdbs (0.4.49) UNRELEASED; urgency=low
   * Shortened uploaders list
   * Do not unapply patches when building from a tarball (tarball.mk)
     (closes: #424080)
+  * Normalize spelling of makefile errors and warnings (autotools-files.mk,
+    buildcore.mk, dpatch.mk, perlmodule.mk, python-distutils.mk,
+    simple-patchsys.mk, tarball.mk)
 
  -- Peter Eisentraut <petere@debian.org>  Fri, 18 May 2007 21:03:45 +0200
 
